# status-sha-bench

./: CMakeLists.txt  README.md  bench_results.csv  tst_aesbench.cpp  tst_sha1bench.cpp
git-sha1/: git-sha1.h
go-sqlcipher-libtomcrypt/: aes.c  mbtls_aes.c  mbtls_aes.h  sha1.c  tomcrypt.h
mbedtls/: aes.c  aesce.c  aesce.h  aesni.c  aesni.h
nayuki/: bench-nayuki.c  bench-nayuki.h  nayuki-sha1-fast.c
sha-intrinsics/: sha1-arm8.c  sha1-x86.c  sha1.h
tiny-AES-c/: aes.c  aes.h
